--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .navbar {
   background-image: linear-gradient(90deg, rgb(12, 237, 147), rgb(13, 200, 220));
 }
+
+a, li {
+  list-style: none;
+  text-decoration: none;
+}
+
+.inputField {
+  height: 30px;
+}
