added dynamic displaying and authguards

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,20 @@
 a, li {
   list-style: none;
   text-decoration: none;
+  color: black;
 }
 
 .inputField {
   height: 30px;
+}
+
+button {
+  text-transform: capitalize!important;
+  border-radius: 10px!important;
+}
+
+.green-btn {
+  background-image: linear-gradient(90deg, rgb(12, 237, 147), rgb(13, 200, 220));
+  color: white!important;
+  font-weight: bold!important;
 }
